--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   path: ^1.9.0
   logger: ^2.5.0
   dio: ^5.7.0
+  supabase_flutter: ^2.8.2
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
