--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   dio: ^5.7.0
   supabase_flutter: ^2.8.2
   provider: ^6.1.2
+  crypto: ^3.0.6
 
 dev_dependencies:
   flutter_test:
