--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,11 @@ dependencies:
   path: ^1.9.0
   logger: ^2.5.0
   dio: ^5.7.0
-  supabase_flutter: ^2.8.2
   provider: ^6.1.2
   crypto: ^3.0.6
+  firebase_core: ^3.9.0
+  firebase_auth: ^5.3.4
+  cloud_firestore: ^5.6.0
 
 dev_dependencies:
   flutter_test:
